# mbl

./: CLAUDE.md  Makefile  README.md  build.zig  build_repl.sh  design.txt  dummy.c  dummy.zig  main.c  main_test  main_test.zig  mbl-old.md  minimal  minimal.zig  record.c  record.h  requirements.txt  test  test.zig  test_parser  test_parser.zig
.github/workflows/: ci.yml
modern-business-language/: go.mod
modern-business-language/cmd/mblinterpreter/: main.go
modern-business-language/pkg/lexer/: lexer.go  placer.go
modern-business-language/pkg/runner/: runner.go
modern-business-language/tests/: lexer_test.go
src/: CMakeLists.txt  main.zig  repl.zig  runtime.zig  runtime_test.zig
src/lexer/: lexer.zig  lexer_test.zig  parser.zig  parser_test.zig  test_parser.zig  token.zig
src/memory/: memory.zig  memory_test.zig  value.zig
tests/: CMakeLists.txt
tests/lexer/: lexer_test.cpp
zig-cache/o/2e2e170da111a5e8e5d0dc1994f27ecb/: test
zig-cache/o/5c4f93ac39a1f6635a47dbbcf5056e83/: builtin.zig
zig-cache/o/70a4ab94aa785d22f412b92446af3a6d/: builtin.zig
zig-cache/o/7264016e104869086436b0718db4634c/: test
zig-cache/o/761c6e97fb19d5b9f039f77b539ce627/: builtin.zig
zig-cache/o/79fc4ab4495df69afb6c5a819a427839/: test
zig-cache/o/9d52030e5870330c3998faecfc4b3565/: mbl
zig-cache/o/d70eb40b3898a3391c5aca2dc6b930e3/: builtin.zig
zig-cache/o/eaae8db1692bcf026bb3dbbb1db30e9b/: test
